--- a/templates/default/django.wsgi.erb
+++ b/templates/default/django.wsgi.erb
@@ -2,7 +2,27 @@ import os
 import sys
 import site
 
-site.addsitedir("<%= @site_packages %>")
+# put the virtualenv site-packages at the front of sys path
+# see http://code.google.com/p/modwsgi/wiki/VirtualEnvironments#Application_Environments
+
+ALLDIRS = ["<%= @site_packages %>"]
+
+# Remember original sys.path.
+prev_sys_path = list(sys.path) 
+
+# Add each new site-packages directory.
+for directory in ALLDIRS:
+  site.addsitedir(directory)
+
+# Reorder sys.path so new directories at the front.
+new_sys_path = [] 
+for item in list(sys.path): 
+    if item not in prev_sys_path: 
+        new_sys_path.append(item) 
+        sys.path.remove(item) 
+sys.path[:0] = new_sys_path
+
+
 sys.path.append("<%= @app_path %>")
 
 os.environ['DJANGO_SETTINGS_MODULE'] = "<%= @django_settings_module %>"
